--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 #wrapper #header {z-index:3;position:relative;width:100%;height:100px;background:#944;}
 #wrapper #header #wrap {width:1200px;height:100%;margin:0 auto;background:#494;}
 #wrapper #header #wrap .content {width:100%;height:100%;}
-#wrapper #header #wrap .content .left-box {float:left;width:200px;height:100%;background:#faa;}
+#wrapper #header #wrap .content .left-box {float:left;width:200px;height:100%;line-height:100px;text-align:center;background:#faa;}
 #wrapper #header #wrap .content .right-box {float:left;width:1000px;height:100%;text-align:right;background:#f8f8f8;}
 #wrapper #header #wrap .content .right-box #nav {display:inline-block;width:calc(180px*4);height:50px;background:#944;margin-top:50px;margin-right:25px;}
 #wrapper #header #wrap .content .right-box #nav > ul {width:100%;height:100%;background:#449;}
